--- a/ios/EpicRunner/EpicRunner/Main.storyboard
+++ b/ios/EpicRunner/EpicRunner/Main.storyboard
@@ -246,16 +246,19 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="min/km" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cs1-99-NpG">
-                                <rect key="frame" x="90" y="332" width="42" height="21"/>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="min/km" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cs1-99-NpG">
+                                <rect key="frame" x="65" y="332" width="42" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="XX" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uyX-dt-UIA" userLabel="lblAvgSpeed - XX">
-                                <rect key="frame" x="20" y="332" width="62" height="21"/>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="XX" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uyX-dt-UIA" userLabel="lblAvgSpeed - XX">
+                                <rect key="frame" x="20" y="332" width="30" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="100" id="0Wf-hn-Abd"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
@@ -274,30 +277,33 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="m" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aww-g2-zTV">
-                                <rect key="frame" x="232" y="397" width="35" height="21"/>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="m" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aww-g2-zTV">
+                                <rect key="frame" x="176" y="397" width="35" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="XX" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EaC-Zz-XPQ" userLabel="lblMaxAltitude - XX">
-                                <rect key="frame" x="162" y="397" width="62" height="21"/>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="X" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EaC-Zz-XPQ" userLabel="lblMaxAltitude - XX">
+                                <rect key="frame" x="162" y="397" width="13" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="m" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Xl-br-uJq">
-                                <rect key="frame" x="90" y="397" width="35" height="21"/>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="m" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Xl-br-uJq">
+                                <rect key="frame" x="35" y="397" width="35" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="XX" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7nF-IO-uDG" userLabel="lblMinAltitude - XX">
-                                <rect key="frame" x="20" y="397" width="62" height="21"/>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="X" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7nF-IO-uDG" userLabel="lblMinAltitude - XX">
+                                <rect key="frame" x="20" y="397" width="16" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="100" id="5wv-4T-Cxp"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
@@ -309,16 +315,40 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="C3G-yK-qIP">
+                                <rect key="frame" x="0.0" y="436" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                                <items>
+                                    <barButtonItem width="42" style="plain" systemItem="fixedSpace" id="jWy-JK-znS"/>
+                                    <barButtonItem systemItem="trash" id="PyR-id-kP4">
+                                        <connections>
+                                            <action selector="deleteRun:" destination="kkl-7I-4U7" id="Prf-w1-ydd"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="aww-g2-zTV" firstAttribute="leading" secondItem="EaC-Zz-XPQ" secondAttribute="trailing" constant="1" id="0Aa-xC-k4U"/>
                             <constraint firstItem="oHT-fx-glY" firstAttribute="leading" secondItem="8tG-g3-71U" secondAttribute="leading" constant="20" id="41d-Kj-TbK"/>
+                            <constraint firstItem="7nF-IO-uDG" firstAttribute="top" secondItem="2Xl-br-uJq" secondAttribute="bottom" constant="-21" id="7QD-5E-yF4"/>
+                            <constraint firstItem="aww-g2-zTV" firstAttribute="top" secondItem="EaC-Zz-XPQ" secondAttribute="bottom" constant="-21" id="8eg-ob-WVH"/>
+                            <constraint firstItem="cs1-99-NpG" firstAttribute="leading" secondItem="uyX-dt-UIA" secondAttribute="trailing" constant="1" id="BU4-zB-hlh"/>
+                            <constraint firstItem="2Xl-br-uJq" firstAttribute="leading" secondItem="7nF-IO-uDG" secondAttribute="trailing" constant="1" id="Gcj-mN-q4W"/>
+                            <constraint firstItem="7nF-IO-uDG" firstAttribute="leading" secondItem="8tG-g3-71U" secondAttribute="leading" constant="20" id="N7y-z8-zDF"/>
                             <constraint firstItem="Fso-zU-esW" firstAttribute="centerY" secondItem="oHT-fx-glY" secondAttribute="centerY" id="P1D-Cj-57G"/>
+                            <constraint firstItem="EaC-Zz-XPQ" firstAttribute="leading" secondItem="8tG-g3-71U" secondAttribute="leading" constant="162" id="Sx5-8g-TOb"/>
                             <constraint firstItem="Fso-zU-esW" firstAttribute="leading" secondItem="oHT-fx-glY" secondAttribute="trailing" constant="1" id="X8N-Db-U4j"/>
+                            <constraint firstItem="uyX-dt-UIA" firstAttribute="leading" secondItem="8tG-g3-71U" secondAttribute="leading" constant="20" id="arM-gs-P8T"/>
+                            <constraint firstItem="uyX-dt-UIA" firstAttribute="centerY" secondItem="cs1-99-NpG" secondAttribute="centerY" id="nzV-4o-iu6"/>
                         </constraints>
                     </view>
+                    <toolbarItems/>
                     <navigationItem key="navigationItem" title="Run Summary" id="9d4-32-L56"/>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
+                        <outlet property="btnDelete" destination="PyR-id-kP4" id="BkC-aB-bDi"/>
                         <outlet property="lblAvgSpeed" destination="uyX-dt-UIA" id="rSG-y8-MIG"/>
                         <outlet property="lblDate" destination="7OG-gU-g9d" id="nDK-qk-sAz"/>
                         <outlet property="lblDistance" destination="oHT-fx-glY" id="KsO-cq-NyJ"/>
@@ -327,9 +357,11 @@
                         <outlet property="lblMaxSpeed" destination="XUp-zq-eFl" id="n5E-Vn-9tn"/>
                         <outlet property="lblMinAltitude" destination="7nF-IO-uDG" id="KPq-Zf-bv4"/>
                         <outlet property="mapView" destination="aaM-dZ-z2b" id="zKb-Do-EZe"/>
+                        <segue destination="Yc2-UU-vD8" kind="unwind" identifier="unwindToHistory" unwindAction="unwindToHistory:" id="9cE-7e-iWp"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="enO-Pt-eIB" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="Yc2-UU-vD8" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="2015" y="-63"/>
         </scene>
@@ -445,10 +477,10 @@
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Red" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="hw6-DV-Pwu">
+                                        <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="More to come.." lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="hw6-DV-Pwu">
                                             <rect key="frame" x="15" y="0.0" width="290" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
-                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                            <fontDescription key="fontDescription" type="italicSystem" pointSize="20"/>
                                             <color key="textColor" red="0.5819355923848204" green="0.60723080842391308" blue="0.60619582161417407" alpha="1" colorSpace="calibratedRGB"/>
                                             <color key="highlightedColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         </label>
