MP Demo & few tweaks.
*Changes of RunSelector.
*Demo of multiplayer implemented (proof of concept), ready to be tested
on device.

--- a/ios/EpicRunner/EpicRunner/Main.storyboard
+++ b/ios/EpicRunner/EpicRunner/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5053" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="ZIN-YB-L81">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13C1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="ZIN-YB-L81">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
@@ -59,7 +59,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uyl-ke-5jv" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="B8X-ck-Nn1" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="1615" y="171"/>
+            <point key="canvasLocation" x="2651" y="172"/>
         </scene>
         <!--Map View Controller - Run-->
         <scene sceneID="Wlk-cF-IBd">
@@ -88,6 +88,26 @@
                                     <action selector="runButtonClick:" destination="Tsx-2i-5rC" eventType="touchDown" id="PZo-eP-0m2"/>
                                 </connections>
                             </button>
+                            <button contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KzJ-e8-ZuE">
+                                <rect key="frame" x="275" y="78" width="30" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.88478162466363053" green="0.89616593070652173" blue="0.88073648223804857" alpha="0.5" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="15"/>
+                                <state key="normal" title="+"/>
+                                <connections>
+                                    <action selector="plusZoom:" destination="Tsx-2i-5rC" eventType="touchUpInside" id="GA0-el-4bD"/>
+                                </connections>
+                            </button>
+                            <button contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nyn-zu-9P8">
+                                <rect key="frame" x="275" y="116" width="30" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.88478162469999999" green="0.89616593069999995" blue="0.8807364822" alpha="0.5" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="15"/>
+                                <state key="normal" title="-"/>
+                                <connections>
+                                    <action selector="minusZoom:" destination="Tsx-2i-5rC" eventType="touchUpInside" id="bl5-3P-JLn"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
@@ -111,7 +131,66 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="G8e-nc-Bgi" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1182" y="171"/>
+            <point key="canvasLocation" x="2218" y="172"/>
+        </scene>
+        <!--Run Selector View Controller - Run Selector-->
+        <scene sceneID="3Z6-eu-TKT">
+            <objects>
+                <viewController id="D5i-2R-Ad1" customClass="RunSelectorViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="pBi-KY-e2b"/>
+                        <viewControllerLayoutGuide type="bottom" id="g4N-uI-5Cf"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="fqN-Hb-ukO">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jAH-oC-J6x">
+                                <rect key="frame" x="20" y="86" width="93" height="45"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.062495960509999997" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <state key="normal" title="Run now">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="Tsx-2i-5rC" kind="push" id="Rq7-1d-JeS"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eLZ-sq-QaV">
+                                <rect key="frame" x="141" y="86" width="159" height="45"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.87228260869565211" green="0.8300492796474167" blue="6.6477354720449134e-05" alpha="1" colorSpace="calibratedRGB"/>
+                                <state key="normal" title="Multiplayer Demo">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="Tsx-2i-5rC" kind="push" identifier="SegueMultiplayer" id="MPY-Ad-xke"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vtw-Sc-Snl">
+                                <rect key="frame" x="20" y="151" width="280" height="45"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.87228260869999996" green="0.50411696979634979" blue="0.14234799810259774" alpha="1" colorSpace="calibratedRGB"/>
+                                <state key="normal" title="1-Point Location Run Demo">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="Tsx-2i-5rC" kind="push" identifier="Segue1AutoRoute" id="qk1-hh-PBC"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Run Selector" id="Nxc-Fo-dw2">
+                        <barButtonItem key="leftBarButtonItem" image="reveal-icon.png" id="OaC-ey-lZ4"/>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="btnMenu" destination="OaC-ey-lZ4" id="rXg-g2-CTO"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eet-NP-Smc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1194" y="172"/>
         </scene>
         <!--History Table View Controller - History-->
         <scene sceneID="B0G-UP-YsD">
@@ -370,6 +449,7 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="FTf-h4-ssb" sceneMemberID="viewController">
                     <toolbarItems/>
+                    <navigationItem key="navigationItem" id="hAB-ss-tig"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="kNR-HZ-VX8">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -381,7 +461,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3Ed-IA-k0Y" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="775" y="171"/>
+            <point key="canvasLocation" x="1811" y="172"/>
         </scene>
         <!--Main Screen View Controller - Epic Runner-->
         <scene sceneID="zL2-gx-mfA">
@@ -404,7 +484,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="Tsx-2i-5rC" kind="push" id="TLT-q9-yUC"/>
+                                    <segue destination="D5i-2R-Ad1" kind="push" id="1BD-q7-4aT"/>
                                 </connections>
                             </button>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="clip" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="251" translatesAutoresizingMaskIntoConstraints="NO" id="ZSD-WL-r3Q">
@@ -430,7 +510,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jr9-wX-fRz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="713" y="786"/>
+            <point key="canvasLocation" x="691" y="1402"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="IaC-a8-xYV">
@@ -515,7 +595,7 @@
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="label" destination="nYb-Xy-5A6" id="jSH-rn-PId"/>
-                                    <segue destination="Tsx-2i-5rC" kind="custom" customClass="SWRevealViewControllerSegue" id="h2J-sA-FRq"/>
+                                    <segue destination="D5i-2R-Ad1" kind="custom" customClass="SWRevealViewControllerSegue" id="PS5-tc-QHH"/>
                                 </connections>
                             </tableViewCell>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="History" textLabel="loa-jn-2t1" style="IBUITableViewCellStyleDefault" id="gr1-uD-vdH" customClass="SWUITableViewCell">
@@ -559,14 +639,14 @@
                                     <outlet property="label" destination="ZzV-PY-U9q" id="r6w-ba-u8i"/>
                                 </connections>
                             </tableViewCell>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Settings" textLabel="Ocg-Rb-1Cw" style="IBUITableViewCellStyleDefault" id="vMV-ZK-Ieh" customClass="SWUITableViewCell">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Shop" textLabel="Ocg-Rb-1Cw" style="IBUITableViewCellStyleDefault" id="vMV-ZK-Ieh" customClass="SWUITableViewCell">
                                 <rect key="frame" x="0.0" y="198" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="vMV-ZK-Ieh" id="gDG-Db-5It">
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Settings" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Ocg-Rb-1Cw">
+                                        <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Shop" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Ocg-Rb-1Cw">
                                             <rect key="frame" x="15" y="0.0" width="290" height="44"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
@@ -577,6 +657,26 @@
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="label" destination="Ocg-Rb-1Cw" id="Wlq-ge-mEi"/>
+                                </connections>
+                            </tableViewCell>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Settings" textLabel="kE0-FM-fGK" style="IBUITableViewCellStyleDefault" id="6r9-0s-ehg" customClass="SWUITableViewCell">
+                                <rect key="frame" x="0.0" y="242" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="6r9-0s-ehg" id="v8X-fY-NcR">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Settings" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="kE0-FM-fGK">
+                                            <rect key="frame" x="15" y="0.0" width="290" height="44"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="highlightedColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="label" destination="kE0-FM-fGK" id="iLD-KY-X3d"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -623,7 +723,25 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ven-HH-dO0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="306" y="786"/>
+            <point key="canvasLocation" x="306" y="1402"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="qO9-v4-xcf">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="PS6-S7-6yK" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="zIy-oU-cz2">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="D5i-2R-Ad1" kind="relationship" relationship="rootViewController" id="jme-Pj-U3p"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4nk-LF-tNS" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="776" y="172"/>
         </scene>
     </scenes>
     <resources>
@@ -636,8 +754,9 @@
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
+        <segue reference="qk1-hh-PBC"/>
+        <segue reference="jme-Pj-U3p"/>
         <segue reference="TgW-bR-mSt"/>
-        <segue reference="h2J-sA-FRq"/>
         <segue reference="1bv-M6-sUt"/>
     </inferredMetricsTieBreakers>
 </document>
